# generalauthorization

./: AUTHORS  Makefile.am  README  README.markdown  autogen.sh  configure.ac
plugins/: Makefile.am  example_main.c  example_main.h
setup/init/: generalauthorizationd.in
src/: Makefile.am  genauthz_callout_helper.c  genauthz_callout_helper.h  genauthz_common.c  genauthz_common.h  genauthz_conf.c  genauthz_conf.h  genauthz_control.c  genauthz_control.h  genauthz_evaluator.c  genauthz_evaluator.h  genauthz_httprest.c  genauthz_httprest.h  genauthz_json_xacml.c  genauthz_json_xacml.h  genauthz_main.h  genauthz_normalized_xacml.c  genauthz_normalized_xacml.h  genauthz_pap.c  genauthz_pap.h  genauthz_pdp.c  genauthz_pdp.h  genauthz_plugin.h  genauthz_xacml.c  genauthz_xacml.h  genauthz_xacml_rule_parser.c  genauthz_xacml_rule_parser.h  genauthz_xml_xacml.c  genauthz_xml_xacml.h  libgenauthz_core.pc.in  main.c  sha256.c
src/genauthz/: genauthz_common.h  genauthz_conf.h  genauthz_control.h  genauthz_evaluator.h  genauthz_httprest.h  genauthz_main.h  genauthz_normalized_xacml.h  genauthz_pap.h  genauthz_pdp.h  genauthz_plugin.h  genauthz_xacml.h  queue.h
tests/: benchmark.sh  plot_it.sh  policy.conf  policy2.conf  post_json_request.sh  post_request.sh  test.conf  test2.conf  xacml_request.json  xacml_request.xml
